[gd_scene load_steps=10 format=3 uid="uid://s3sf4ltqfaxn"]

[ext_resource type="Script" path="res://scenes/interface/menus/MainMenu.gd" id="1_r4jk3"]
[ext_resource type="FontFile" uid="uid://cqw63mte3fp2c" path="res://resources/fonts/AlteHaasGroteskBold.ttf" id="2_g2ux3"]
[ext_resource type="StyleBox" uid="uid://xjlqfqx4jajq" path="res://resources/styles/new_style_box_flat.tres" id="3_33fjn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axdq8"]
bg_color = Color(0.168627, 0.211765, 0.266667, 1)
border_width_left = 24
border_width_right = 24
border_color = Color(0.168627, 0.211765, 0.266667, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7r7ru"]
bg_color = Color(0.533333, 0.713726, 0.866667, 1)
border_width_left = 24
border_width_right = 24
border_color = Color(0.533333, 0.713726, 0.866667, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_f1yl6"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 32
Button/styles/hover = SubResource("StyleBoxFlat_axdq8")
Button/styles/normal = SubResource("StyleBoxFlat_7r7ru")
Button/styles/pressed = SubResource("StyleBoxFlat_7r7ru")
Label/font_sizes/font_size = 48
VBoxContainer/constants/separation = 16

[sub_resource type="LabelSettings" id="LabelSettings_kolcs"]
line_spacing = -28.475
font = ExtResource("2_g2ux3")
font_size = 96
outline_size = 3
shadow_size = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2e3r1"]
bg_color = Color(1, 1, 1, 1)
shadow_color = Color(0.298039, 0.298039, 0.298039, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="Theme" id="Theme_o584t"]
default_font = ExtResource("2_g2ux3")
default_font_size = 40
Button/colors/font_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 32
Button/styles/normal = SubResource("StyleBoxFlat_2e3r1")
Button/styles/pressed = ExtResource("3_33fjn")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_f1yl6")
script = ExtResource("1_r4jk3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 95

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CHASER'S
WORLD"
label_settings = SubResource("LabelSettings_kolcs")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_o584t")
theme_override_constants/separation = 35

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/Buttons"]
layout_mode = 2
text = "START"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/Buttons"]
layout_mode = 2
text = "EXIT"

[connection signal="button_down" from="MarginContainer/VBoxContainer/MarginContainer/Buttons/Start" to="." method="_on_start_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/MarginContainer/Buttons/Start" to="." method="_on_start_button_up"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/MarginContainer/Buttons/Start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/MarginContainer/Buttons/Exit" to="." method="_on_exit_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/MarginContainer/Buttons/Exit" to="." method="_on_exit_button_up"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/MarginContainer/Buttons/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Buttons/Exit" to="." method="_on_exit_pressed"]
