extends Control

func _ready() -> void:
	pass

func _on_start_mouse_entered() -> void:
	pass
	#GameManager.interface.on_button_hover()

func _on_exit_mouse_entered() -> void:
	pass
	#GameManager.interface.on_button_hover()


func _on_start_button_up() -> void:
	pass
	#GameManager.interface.on_button_release()


func _on_start_button_down() -> void:
	pass
	#GameManager.interface.on_button_press()


func _on_exit_button_up() -> void:
	pass
	#GameManager.interface.on_button_release()


func _on_exit_button_down() -> void:
	pass
	#GameManager.interface.on_button_press()
